Fixing gap between questions

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ a {
     display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 0px;
 }
 
 .questionsContainerTwo .containerOne,
